added exceptions, rewrite controller and service, fix bugs